[package]
name = "flat_device_tree"
version = "2.1.0"
edition = "2021"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Rust device_tree developers"]
license = "MIT"
description = "Reads and parses Linux device tree images"
repository = "https://codeberg.org/weathered-steel/flat_device_tree"
documentation = "https://docs.rs/flat_device_tree"

[dependencies]
hashbrown = "0.13"

[features]
string-dedup = [] # Requires std
